--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,8 @@ jobs:
           command: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe 
       - store_artifacts:
           path: .\bin\Release\netcoreapp2.1\win10-x64\publish\circleci-demo-windows.exe
+workflows:
+  version: 2
+    oneonly:
+      jobs:
+        - build
